--- a/login.html
+++ b/login.html
@@ -3,31 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Login</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <body class="signup-page">
+    <body class="login-page">
     <div class="logo">Crop Talk</div>
     <div class="container">
-        <h1>Sign Up</h1>
+        <h1>Login</h1>
         <label for="username">Username</label>
         <input type="text" id="username" placeholder="Enter Username">
-
-        <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Enter Email">
-
-        <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Enter Name">
-
+        
         <label for="password">Password</label>
         <input type="password" id="password" placeholder="Enter Password">
-
-        <label for="confirm-password">Re-Enter Password</label>
-        <input type="password" id="confirm-password" placeholder="Re-Enter Password">
-
-        <a href="login.html" class="link-btn">Submit</a>
+        
         <a href="index.html" class="link-btn">Log In</a>
+        <a href="signup.html" class="link-btn">Sign Up</a>
     </div>
 </body>
 </html>
