Changed post page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </header>
     
     <nav class="sidebar">
-        <button class="nav-btn">Home</button>
+        <a href="index.html">
+            <button class="nav-btn">Home</button>
+         </a>
         <button class="nav-btn">Crop Prices</button>
         <button class="nav-btn">Tool Prices</button>
         <button class="nav-btn">Farm AI</button>
@@ -39,12 +41,6 @@
             <button class="filter-btn">Most Recent</button>
         </div>
 
-        <section class="create-post">
-            <h3>Create a Post</h3>
-            <textarea id="post-content" placeholder="Ask your questions"></textarea>
-            <button id="submit-post">Submit Post</button>
-        </section>
-        
         <section class="posts">
             <h3>Posts</h3>
         </section>
