--- a/postpage.html
+++ b/postpage.html
@@ -25,7 +25,9 @@
     </header>
     
     <nav class="sidebar">
-        <button class="nav-btn">Home</button>
+        <a href="index.html">
+            <button class="nav-btn">Home</button>
+         </a>
         <button class="nav-btn">Crop Prices</button>
         <button class="nav-btn">Tool Prices</button>
         <button class="nav-btn">Farm AI</button>
