--- a/postpage.html
+++ b/postpage.html
@@ -28,9 +28,17 @@
         <a href="index.html">
             <button class="nav-btn">Home</button>
          </a>
-        <button class="nav-btn">Crop Prices</button>
-        <button class="nav-btn">Tool Prices</button>
-        <button class="nav-btn">Farm AI</button>
+         <a href="cropprice.html">
+            <button class="nav-btn">Crop Prices</button>
+         </a>
+         
+         <a href="toolprice.html">
+            <button class="nav-btn">Tool Prices</button>
+         </a>
+        
+         <a href="farmai.html">
+            <button class="nav-btn">Farm Ai</button>
+         </a>
     </nav>
 
     <main class="content">
