--- a/signup.html
+++ b/signup.html
@@ -26,8 +26,12 @@
         <label for="confirm-password">Re-Enter Password</label>
         <input type="password" id="confirm-password" placeholder="Re-Enter Password">
 
-        <a href="login.html" class="link-btn">Submit</a>
+
+        <script src="script.js"></script>
+        <script src="Mongo.js"></script>
+        <a href="login.html" id="submitButton" class="link-btn">Submit</a>
         <a href="index.html" class="link-btn">Log In</a>
+        
     </div>
 </body>
 </html>
