--- a/signup.html
+++ b/signup.html
@@ -27,6 +27,7 @@
         <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-Enter Password" required>
 
         <button type="submit" class="link-btn">Submit</button>
+        <a href="login.html" class="link-btn">Go back</a>
     </form>
     <script src="script.js"></script>
 </body>
