Created a back button from the account pages

--- a/login.html
+++ b/login.html
@@ -19,6 +19,8 @@
             
             <button id="loginButton" type="button" class="link-btn">Login</button>
             <a href="signup.html" class="link-btn">Sign Up</a>
+            <a href="index.html" class="back-btn">&#8592; Back</a>
+
         </form>
     </div>
     <script src="script.js"></script>
