--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,9 @@
         <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-Enter Password" required>
 
         <button type="submit" class="link-btn">Submit</button>
-        <a href="login.html" class="link-btn">Go back</a>
+        <a href="login.html" class="link-btn">Back to login</a>
+        <a href="index.html" class="back-btn">&#8592; Back</a>
+
     </form>
     <script src="script.js"></script>
 </body>
