--- a/farmai.html
+++ b/farmai.html
@@ -48,8 +48,18 @@
             <button class="filter-btn">Most Popular</button>
             <button class="filter-btn">Most Recent</button>
         </div>
-
     </main> 
+    
+        <main class="content">
+            <section class="farm-ai">
+                <h2>Ask Farm AI</h2>
+                <input type="text" id="farm-ai-input" placeholder="Ask me a question related to farming...">
+                <button id="farm-ai-btn">Submit</button>
+                <div id="farm-ai-response"></div>
+            </section>
+        </main>
+
+    
     <script src="script.js"></script>
 
 </body>
