--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <main class="content">
         <div class="filter-bar">
             <span>Filter By:</span>
-            <button class="filter-btn">Trending</button>
-            <button class="filter-btn">Most Popular</button>
-            <button class="filter-btn">Most Recent</button>
+            <button class="filter-btn" id="trending-btn">Trending</button>
+            <button class="filter-btn" id="popular-btn">Most Popular</button>
+            <button class="filter-btn" id="recent-btn">Most Recent</button>
         </div>
         
         <section class="posts">
