--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main class="content">
         <div class="filter-bar">
             <span>Filter By:</span>
-            <button class="filter-btn" id="trending-btn">Trending</button>
+            <button class="filter-btn" id="default-btn">Default</button>
             <button class="filter-btn" id="popular-btn">Most Popular</button>
             <button class="filter-btn" id="recent-btn">Most Recent</button>
         </div>
