--- a/cropprice.html
+++ b/cropprice.html
@@ -98,7 +98,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">Crop Talk</div>
+        <div class="logo">
+            <img src="CropTalkLogo.png" alt="CropTalk Logo" style="height: 50px;">
+        </div>
         <div class="search-container">
             <input type="text" class="search-bar" placeholder="Search">
             <button class="search-btn">&#128269;</button>
