--- a/farmai.html
+++ b/farmai.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">Logo</div>
+        <div class="logo">
+            <img src="CropTalkLogo.png" alt="CropTalk Logo" style="height: 50px;">
+        </div>
         <div class="search-container">
             <input type="text" class="search-bar" placeholder="Search">
             <button class="search-btn">&#128269;</button>
